refactor: melhora segurança, otimização e legibilidade do padrão Builder
Implementa melhorias significativas seguindo princípios SOLID e boas
práticas de Java moderno, mantendo simplicidade para fins educacionais.

     SEGURANÇA:
     - Substitui double por BigDecimal para precisão monetária exata
     - Adiciona validação de strings vazias/em branco em campos
obrigatórios
     - Implementa List.copyOf() para imutabilidade verdadeira
     - Adiciona validação defensiva em setters do Builder

     OTIMIZAÇÃO:
     - Extrai constantes (DateTimeFormatter, BigDecimal.ZERO)
     - Define capacidade inicial do StringBuilder (500 chars)
     - Substitui concatenação por String.format() no toString()
     - Otimiza loops removendo variáveis externas

     LEGIBILIDADE (SOLID - SRP):
     - Extrai método validate() do build() para separar
responsabilidades
     - Divide prettyPrint() em métodos auxiliares especializados
       * appendCourseHeader()
       * appendModulesList()
       * formatPrice()
     - Melhora nomenclatura de variáveis (m1 -> introductionModule)
     - Remove comentários óbvios, mantendo código auto-explicativo
     - Padroniza formatação e uso de chaves em blocos condicionais

     TESTES:
     - ✅ Todos os 10 testes passando
     - Atualiza testes para usar BigDecimal
     - Mantém compatibilidade com API existente

     DOCUMENTAÇÃO:
     - Adiciona RELATORIO_MELHORIAS.md com análise detalhada
     - Documenta justificativas técnicas para cada alteração
     - Inclui métricas de melhoria e aplicação dos princípios SOLID